--- a/src/hooks/bin/install
+++ b/src/hooks/bin/install
@@ -2,11 +2,38 @@
 
 set -eux
 
-# Create the required directories for services to run.
+################################### Create Supervisor and Syslog Dirs ###################################
 mkdir -p "$SNAP_COMMON/log/"{proxy,http}
 mkdir -p "$SNAP_COMMON/proxy/"{cache,spool}
 mkdir -p "$SNAP_DATA/syslog"
 mkdir -p "$SNAP_DATA/supervisord"
+
+
+################################### Create SLURM Dirs ###################################
+mkdir -p "$SNAP_COMMON/log/"{proxy,http}
+# SLURM logging dir
+mkdir -p $SNAP_COMMON/log
+chmod -R 755 $SNAP_COMMON/log
+
+# SLURM plugin dir
+mkdir -p $SNAP_COMMON/plugins
+chmod -R 755 $SNAP_COMMON/plugins
+
+# Make /var dirs
+mkdir -p $SNAP_COMMON/var/run
+mkdir -p $SNAP_COMMON/var/spool/slurm/{ctld,d}
+chmod -R 755 $SNAP_COMMON/var
+
+
+# SLURM config dir
+mkdir -p $SNAP_COMMON/etc/slurm
+chmod -R 755 $SNAP_COMMON/etc/slurm
+
+# slurm-configurator dir
+mkdir -p $SNAP_COMMON/etc/slurm-configurator
+cp $SNAP/templates/general.yaml $SNAP_COMMON/etc/slurm-configurator/
+chmod -R 755 $SNAP_COMMON/etc/slurm-configurator
+
 
 ################################### Create Munge Dirs ###################################
 # This directory contains the daemon's secret key. The recommended permissions for it are 0700.
