--- a/src/hooks/bin/install
+++ b/src/hooks/bin/install
@@ -8,6 +8,8 @@ mkdir -p "$SNAP_COMMON/proxy/"{cache,spool}
 mkdir -p "$SNAP_DATA/syslog"
 mkdir -p "$SNAP_DATA/supervisord"
 
+################################### Copy Configs ########################################
+#cp "$SNAP/templates/*" "$SNAP_COMMON/etc/slurm-configurator/"
 
 ################################### Create SLURM Dirs ###################################
 mkdir -p "$SNAP_COMMON/log/"{proxy,http}
@@ -31,7 +33,6 @@ chmod -R 755 $SNAP_COMMON/etc/slurm
 
 # slurm-configurator dir
 mkdir -p $SNAP_COMMON/etc/slurm-configurator
-cp $SNAP/templates/general.yaml $SNAP_COMMON/etc/slurm-configurator/
 chmod -R 755 $SNAP_COMMON/etc/slurm-configurator
 
 
